# finforge

./: .gitignore  README.md  finforge.db  main.py  package.json  pnpm-lock.yaml  pyproject.toml  startups.db  tailwind.config.ts
agentApp/: agent.py  agent_old.py  main.py
app/: actions.ts  client-layout.tsx  globals.css  layout.tsx
app/about/: page.tsx
app/api/analyze/: route.ts
app/api/analyze-startup/: route.ts
app/api/investments/: route.ts
app/api/startups/: route.ts
app/chat/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/due-diligence/: page.tsx
app/fin_services/: page.tsx
app/investments/: page.tsx
app/login/: page.tsx
app/news/: layout.tsx  page.tsx
app/register/: page.tsx
app/startups/: page.tsx
components/: chat.tsx  client-layout.tsx  empty-screen.tsx  header.tsx  navbar.tsx  sidebar-context.tsx
components/dashboard/: InvestmentSummaryChart.tsx  InvestmentsTable.tsx  InvestorProfile.tsx  PerformanceChart.tsx  PortfolioAllocationChart.tsx  QuickActionButton.tsx  SectorAllocationChart.tsx  StatCard.tsx  UpcomingEventCard.tsx  overview.tsx  recent-transactions.tsx
components/layout/: main-layout.tsx
components/tradingview/: market-overview.tsx  market-trending.tsx
components/ui/: card.tsx  compliance-check.tsx  document-analysis.tsx  file-upload.tsx  progress.tsx  risk-assessment.tsx  slider.tsx  tabs.tsx
data/: script1.sql  startups.db
db/: init.sql
lib/: auth-context.tsx  db.ts  types.ts  utils.ts
lib/db/: investments.ts
lib/services/: news-service.ts
scripts/: init-db.js  start.ps1  start.sh
(+6 files in other folders)
