[project]
name = "finforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
